tests/ui/errors/attr.tuples.debug-expand.not-existent-path.rs
use fortuples::fortuples;

struct Container<T>(T);

fortuples! {
    #[tuples::debug_expand(path = "not/existing/file")]
    impl Container<#Tuple> {}
}

fn main() {}
